src/ui/form-field.module.css
.label {
  display: flex;
  color: oklch(var(--rs-color-content-secondary));
  font-size: var(--rs-font-size-caption);
  line-height: 1;
  position: absolute;
  pointer-events: none;
  top: 50%;
  transform: translateY(-45%);
  left: var(--rs-space-small);
  transform-origin: left top;
  transition: transform var(--rs-timing);
}

.field-message {
  font-size: var(--rs-font-size-caption);
  padding-left: var(--rs-space-micro);
}

.input-container {
  position: relative;
  width: 100%;
  border: 1px solid oklch(var(--rs-color-border-default));
  border-radius: var(--rs-border-radius-standart);
  background-color: oklch(var(--rs-fill-background));
  padding: var(--rs-space-micro) 0;
  transition: transform, border-color var(--rs-timing);
}

.input-container > input {
  color: oklch(var(--rs-color-content-primary));
  flex: 1;
  outline: none;
  box-sizing: border-box;
  width: 100%;
  background-color: transparent;
  border: none;
  font-size: var(--font-size-caption) !important;
  margin: 0;
  line-height: 20px;
  padding: calc(var(--rs-space-small) + 1px) 0 calc(var(--rs-space-small) - 1px) var(--rs-space-small);
}

.input-container > input:not(:placeholder-shown) ~ label {
  transform: translateY(-125%) scale(.9);
}

.input-container > input:not(:placeholder-shown) {
  padding: calc(var(--rs-space-medium) - 2px) 0  var(--rs-space-micro) var(--rs-space-small);
}

